--- a/about.html
+++ b/about.html
@@ -5,7 +5,8 @@
     </head>
     <body>
    	 <h1>Your Name</h1>
-   	 <p><strong>My super cool about page</strong></p>
+   	 <p><strong></strong>My super cool about page</strong></p>
+	 <p>This is Nayab</p>
    	 <p>I am a student.</p>
    	 <a href="index.html">Home</a>
     </body>
