--- a/about.html
+++ b/about.html
@@ -4,10 +4,9 @@
    	 <link rel="stylesheet" type="text/css" href="style.css"></link>
     </head>
     <body>
-   	 <h1>Your Name</h1>
+   	 <h1>matthew</h1>
    	 <p><strong>My super lame about page</strong></p>
    	 <p>I am a student.</p>
    	 <a href="index.html">Home</a>
     </body>
 </html>
-fuck ton of code
